[package]
name = "rey_webapp"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
strip = true
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"