[package]
name = "rey_webapp"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = "z"
debug = false
strip = true
panic = "abort"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.3"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.144"
warp = "0.3"